Fix dark mode flickering on load

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,5 +5,9 @@
 html,
 body,
 #__next {
-    height: 100%;
+  height: 100%;
+}
+
+html.dark {
+  color-scheme: dark;
 }
